# Watermark

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  WaterMark.pro
languages/: fr.ts  fr_fr.qm
ressources/: icons.qrc
sources/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  config.hpp  config.hpp.in  cropform.cpp  cropform.hpp  editor.cpp  editor.hpp  licensedialog.cpp  licensedialog.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  preset.cpp  preset.hpp  preview.cpp  preview.hpp  reportissuedialog.cpp  reportissuedialog.hpp  watermark.cpp  watermark.hpp  watermarkform.cpp  watermarkform.hpp
translations/: wm_fr.ts
ui/: aboutdialog.ui  cropform.ui  licensedialog.ui  mainwindow.ui  reportissuedialog.ui  watermarkform.ui
